# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.586 2006/03/16 19:33:26 wolf31o2 Exp $

  16 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/yaboot-1.3.11-cdtar.tar.bz2,
  -livecd/cdtar/yaboot-1.3.11-ppc64-cdtar-r1.tar.bz2,
  +livecd/cdtar/yaboot-1.3.13-cdtar.tar.bz2,
  -livecd/cdtar/ppc-yaboot-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh:
  Added sed to PPC/PPC64 to change boot.msg to match the hardware for which
  the CD was built, merged the PPC and PPC64 cdtar files into a single cdtar,
  and removed all older cdtar files for PPC*.

  13 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  livecd/files/livecd.motd.txt:
  Added message to the official LiveCD MOTD mentioning how to run the
  installer. Blame codeman. This is 2.0_rc40.

  13 Mar 2006; Eric Edgar <rocket@gentoo.org> modules/snapshot_target.py:
  fix so snapshot target doesnt have errors

  13 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Finalized the sync from my fsscript for 2006.0 into catalyst. It is now no
  longer necessary to use a fsscript to duplicate the official Gentoo LiveCD
  builds.

  12 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Removed hdparm and alsasound from rc-update.sh as they are pulled in by the
  autoconfig script.

  21 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added wrapping around the udev sed for those crazy 2.4-users.

  17 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  Added sed fix for udev starting evms_activate unconditionally. This is
  2.0_rc39.

  17 Feb 2006; Eric Edgar <rocket@gentoo.org> modules/stage4_target.py:
  add stage4/unmerge stage4/rm to valid options

  15 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh: