@@ -1,5 +1,11 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.586 2006/03/16 19:33:26 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.587 2006/03/22 19:05:39 wolf31o2 Exp $
+
+  22 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/livecd-stage2/livecd-stage2-controller.sh,
+  targets/support/livecdfs-update.sh:
+  Made sure that livecd/motd is ignored for livecd/type: gentoo-* and added
+  some extra cleanup to generic-livecd.
 
   16 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   -livecd/cdtar/yaboot-1.3.11-cdtar.tar.bz2,
